--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-#spring.datasource.url=jdbc:mysql://localhost/study_js
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-mybatis.mapper-locations=classpath:mapper/**/*.xml
-
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost/study_js
+spring.datasource.url=jdbc:mysql://localhost/study_js
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:mysql://localhost/study_js
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 # ?? ?? ??
 logging.level.jdbc.sqlonly=off
