--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,17 @@ spring.datasource.url=jdbc:log4jdbc:mysql://localhost/study_js
 spring.datasource.username=root
 spring.datasource.password=1234
 
+
 # ?? ?? ??
 logging.level.jdbc.sqlonly=off
 logging.level.jdbc.sqltiming=info
 logging.level.jdbc.resultsettable=info
 logging.level.jdbc.audit=off
 logging.level.jdbc.resultset=off
-logging.level.jdbc.connection=off
+
+
+# spring doc
+#springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs/json
+springdoc.packagesToScan=com.hyeon.demo.controller
+#springdoc.pathsToMatch=/boards
