[ADD] EB 배포 환경설정 추가

--- a/src/main/resources/application-proc.properties
+++ b/src/main/resources/application-proc.properties
@@ -1,6 +1,4 @@
-server.port=5000
-
-spring.datasource.url=jdbc:mysql://database-1.cb3rhtj7nqnv.ap-northeast-2.rds.amazonaws.com/study_js
+spring.datasource.url=jdbc:mysql:database-1.cb3rhtj7nqnv.ap-northeast-2.rds.amazonaws.com/study_js
 spring.datasource.username=hyeon
 spring.datasource.password=02210221
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
